# podagent-podcast-agentic-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  SETUP.md  package.json  phase1.md  pnpm-lock.yaml  podagent-srs.docx.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/server/: README.md  pyproject.toml
apps/server/src/podagent_server/: __init__.py  config.py
apps/server/src/podagent_server/auth/: middleware.py
apps/server/src/podagent_server/ingestion/: __init__.py  cli.py  pipeline.py
apps/server/src/podagent_server/ingestion/chunking/: __init__.py  base.py  token_window.py
apps/server/src/podagent_server/ingestion/sources/: __init__.py  base.py  local_upload.py
apps/server/src/podagent_server/ingestion/transcription/: __init__.py  base.py
apps/server/src/podagent_server/learnflow/: __init__.py  llm.py  models.py  prompts.py  service.py
apps/server/src/podagent_server/mcp/: __init__.py  server.py
apps/server/src/podagent_server/mcp/tools/: __init__.py  ingestion.py  learnflow.py  library.py  retrieval.py
apps/server/src/podagent_server/retrieval/: __init__.py  search.py
apps/server/src/podagent_server/retrieval/embeddings/: azure_openai_embedder.py  base.py  openai_embedder.py
apps/server/src/podagent_server/retrieval/vector_store/: base.py  in_memory.py  pgvector.py
apps/server/src/podagent_server/storage/: models.py
apps/server/src/podagent_server/storage/repositories/: __init__.py  base.py  chunk_repo.py  episode_repo.py  job_repo.py
apps/server/src/podagent_server/ui_resources/: __init__.py  hints.py
apps/server/tests/: conftest.py  test_azure_openai_embedder.py  test_in_memory_vector_store.py  test_learnflow_llm.py  test_learnflow_models.py  test_learnflow_tools.py
apps/server/tests/fixtures/: sample_transcript.vtt
apps/web/: package.json  tailwind.config.ts  vitest.config.mts
docs/: RESEARCH_SUMMARY.md  YOUTUBE_IP_BLOCK_SOLUTIONS.md
podcasts/Huberman/: ADHD & How Anyone Can Improve Their Focus.md  Boost Attention & Memory with Science-Based Tools _ Dr Wendy Suzuki.md  Breathing for Mental & Physical Health & Performance _ Dr Jack Feldman.md  Control Pain & Heal Faster with Your Brain.md  Controlling Sugar Craving & Metabolism with Science-Based Tools.md  Controlling Your Dopamine For Motivation, Focus & Satisfaction.md  Dr Andy Galpin- How to Build Strength, Muscle Size & Endurance.md  Effects of Fasting & Time Restricted Eating on Fat Loss & Health.md  Healthy Eating & Eating Disorders - Anorexia, Bulimia, Binging.md  How Food & Nutrition Controls Our Mood.md  How Hormones Control Hunger, Eating & Satiety.md  How Hormones Shape Sexual Development.md  How Humans Select & Keep Romantic Partners in Short & Long Term _ Dr David Buss.md  How to Focus to Change Your Brain.md  (+68 more)
research/: validate_combined.py  validate_podcastindex.py  validate_spotify.py  validate_youtube.py
(+55 files in other folders)
