[project]
name = "podagent-research"
version = "0.1.0"
description = "PodAgent ingestion source validation scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # YouTube transcript extraction (no API key needed)
    "youtube-transcript-api>=1.0.0",
    # Podcast Index API wrapper (requires free API key from podcastindex.org)
    "python-podcastindex>=1.15.0",
    # Spotify Web API wrapper (requires Spotify Developer account)
    "spotipy>=2.25.0",
    # Optional: For making HTTP requests if needed
    "requests>=2.31.0",
    # For pretty printing JSON output
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.uv]
python-downloads = "automatic"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
