[project]
name = "podagent"
version = "0.1.0"
description = "PodAgent — agent-based system for interactive podcast intelligence"
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
python-downloads = "automatic"

[tool.uv.workspace]
members = ["apps/server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
